MSGED TE (TOBI'S EDITION) 06 - DOCUMENTATION OF NEW FEATURES AND CHANGES
========================================================================

Features, Changes and Fixes in the current development version of MsgEd
-----------------------------------------------------------------------

Changes:

- Reworked the Alt+D (Ctrl+Y) delete line function in the editor. Previously,
  if you pressed Ctrl+Y and were at the very last line of the message, the
  line would be killed and the cursor would move up, so that if you pressed
  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.

Features:

- New Switch: DirectList. If you put "Switch DirectList On" into your config
  file, you will directly drop into the message listing mode when entering a
  message area, instead of the individual message reading mode like it is the
  default.

- New keyword: Printer. Specifies the printer port (OS/2, DOS, Windows)
  resp. the lpr options (UNIX) to use for printing (Alt+W, Print).
  Default is "PRN" on OS/2, DOS and Windows, and an empty string ("lpr -" is
  called without any options, so that the default queue is used) on UNIX.

- Reworked the file import/export interface. You now have a nice menu for
  selecting the file to read or write, and menus that ask you if you if you
  want to write the text to file, or to print it or to pipe it, and which
  export mode should be used.

- Support for @FLAGS kludge lines. Msged now will write a FLAGS kludge
  line if flags that are not supported by the current storage format
  have to be saved, and it recognises flags in FLAGS kludge lines in 
  messages that it reads. See FSC 0053 for further information.
